Add basic request api functionality testing and post custom request utility.